# oop_project

./: README.md  analise.md  implementacao.md  testes.md
code/: CMakeLists.txt  README.md  bonfireroom.cpp  bonfireroom.h  bossroom.cpp  bossroom.h  character.cpp  character.h  combatroom.cpp  combatroom.h  enemy.cpp  enemy.h  equipmentroom.cpp  equipmentroom.h  gamewindow.cpp  gamewindow.h  main.cpp  player.cpp  player.h  room.h  roomfactory.cpp  roomfactory.h  storyroom.cpp  storyroom.h
img/: README.md
img/Diagramas/: README.md
oop_project/: README.md  analise.md
